# arxiv-rag

./: .dockerignore  .env  Dockerfile  README.md  app.py  docker-compose.yml  env.example  pyproject.toml
src/: __init__.py  arxiv_fetcher.py  config.py  database.py  embeddings.py  ingest.py  rag.py
